--- a/WorldTrotter/WorldTrotter/Base.lproj/Main.storyboard
+++ b/WorldTrotter/WorldTrotter/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="11762" systemVersion="15G31" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="11762" systemVersion="15G31" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="VLe-mu-Qyh">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
@@ -10,10 +10,10 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--View Controller-->
+        <!--Convert-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="WorldTrotter" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="BYZ-38-t0r" customClass="ConversionViewController" customModule="WorldTrotter" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="y3c-jy-aDJ"/>
                         <viewControllerLayoutGuide type="bottom" id="wfy-db-euE"/>
@@ -23,64 +23,118 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="degrees Fahrenheit" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Mad-Zl-ZvA">
-                                <rect key="frame" x="34" y="113" width="306" height="43"/>
+                                <rect key="frame" x="34" y="120" width="306" height="43"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="36"/>
                                 <color key="textColor" red="0.88235294117647056" green="0.34509803921568627" blue="0.16078431372549018" alpha="1" colorSpace="calibratedRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="is really" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="PDa-zB-Uw3">
-                                <rect key="frame" x="128" y="164" width="119" height="43"/>
+                                <rect key="frame" x="128" y="171" width="119" height="43"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="36"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="degrees Celsius" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Cbm-Aj-JBe">
-                                <rect key="frame" x="60" y="307" width="254" height="43"/>
+                                <rect key="frame" x="60" y="314" width="254" height="43"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="36"/>
                                 <color key="textColor" red="0.88235294117647056" green="0.34509803921568627" blue="0.16078431372549018" alpha="1" colorSpace="calibratedRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="212" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="2Ln-It-gYq">
-                                <rect key="frame" x="132" y="28" width="111" height="84"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="70"/>
-                                <color key="textColor" red="0.88235294119999996" green="0.34509803919999998" blue="0.16078431369999999" alpha="1" colorSpace="calibratedRGB"/>
-                                <nil key="highlightedColor"/>
-                            </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="100" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="3g5-SM-hZt">
-                                <rect key="frame" x="129" y="215" width="116.5" height="84"/>
+                                <rect key="frame" x="129" y="222" width="116.5" height="84"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="70"/>
                                 <color key="textColor" red="0.88235294117647056" green="0.34509803921568627" blue="0.16078431372549018" alpha="1" colorSpace="calibratedRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
+                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="value" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="YG3-YW-l1L">
+                                <rect key="frame" x="62.5" y="28" width="250" height="84"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="250" id="oBi-vz-Rw5"/>
+                                </constraints>
+                                <color key="textColor" red="0.88235294117647056" green="0.34509803921568627" blue="0.16078431372549018" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="70"/>
+                                <textInputTraits key="textInputTraits" keyboardType="decimalPad"/>
+                                <connections>
+                                    <action selector="fahrenheitFieldEditingChanged:" destination="BYZ-38-t0r" eventType="editingChanged" id="0R4-FH-yKc"/>
+                                </connections>
+                            </textField>
                         </subviews>
                         <color key="backgroundColor" red="0.96078431372549022" green="0.95686274509803915" blue="0.94509803921568625" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <gestureRecognizers/>
                         <constraints>
-                            <constraint firstItem="2Ln-It-gYq" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="8bC-Xf-vdC" secondAttribute="leadingMargin" id="0Y5-IY-fOR"/>
-                            <constraint firstItem="2Ln-It-gYq" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="2yx-x0-9XP"/>
                             <constraint firstItem="Mad-Zl-ZvA" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="8bC-Xf-vdC" secondAttribute="leadingMargin" id="5Pj-hj-FfX"/>
                             <constraint firstItem="Cbm-Aj-JBe" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="8bC-Xf-vdC" secondAttribute="leadingMargin" id="6uX-4u-Aik"/>
-                            <constraint firstItem="2Ln-It-gYq" firstAttribute="centerX" secondItem="Mad-Zl-ZvA" secondAttribute="centerX" id="9j5-wC-UTc"/>
                             <constraint firstItem="PDa-zB-Uw3" firstAttribute="centerX" secondItem="Mad-Zl-ZvA" secondAttribute="centerX" id="AbU-YB-ErG"/>
-                            <constraint firstItem="2Ln-It-gYq" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" constant="8" id="CEa-Mg-P9Q"/>
                             <constraint firstItem="3g5-SM-hZt" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="8bC-Xf-vdC" secondAttribute="leadingMargin" id="E32-Ar-gIL"/>
-                            <constraint firstAttribute="trailingMargin" relation="greaterThanOrEqual" secondItem="2Ln-It-gYq" secondAttribute="trailing" id="Ffl-nY-URO"/>
+                            <constraint firstItem="YG3-YW-l1L" firstAttribute="centerX" secondItem="Mad-Zl-ZvA" secondAttribute="centerX" id="Io5-yP-Hjq"/>
                             <constraint firstItem="3g5-SM-hZt" firstAttribute="top" secondItem="PDa-zB-Uw3" secondAttribute="bottom" constant="8" id="SSb-dY-edd"/>
                             <constraint firstAttribute="trailingMargin" relation="greaterThanOrEqual" secondItem="Cbm-Aj-JBe" secondAttribute="trailing" id="VxL-Hi-hCG"/>
                             <constraint firstAttribute="trailingMargin" relation="greaterThanOrEqual" secondItem="3g5-SM-hZt" secondAttribute="trailing" id="W7P-0d-B3g"/>
                             <constraint firstItem="PDa-zB-Uw3" firstAttribute="top" secondItem="Mad-Zl-ZvA" secondAttribute="bottom" constant="8" id="aL7-K9-oVc"/>
-                            <constraint firstItem="Mad-Zl-ZvA" firstAttribute="top" secondItem="2Ln-It-gYq" secondAttribute="bottom" constant="1" id="bHY-QL-llj"/>
                             <constraint firstItem="3g5-SM-hZt" firstAttribute="centerX" secondItem="Mad-Zl-ZvA" secondAttribute="centerX" id="bWy-bs-wCk"/>
                             <constraint firstItem="Cbm-Aj-JBe" firstAttribute="centerX" secondItem="Mad-Zl-ZvA" secondAttribute="centerX" id="e2c-pM-usU"/>
+                            <constraint firstItem="YG3-YW-l1L" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="l2S-HI-tVi"/>
                             <constraint firstAttribute="trailingMargin" relation="greaterThanOrEqual" secondItem="PDa-zB-Uw3" secondAttribute="trailing" id="lXz-xS-Dj0"/>
                             <constraint firstAttribute="trailingMargin" relation="greaterThanOrEqual" secondItem="Mad-Zl-ZvA" secondAttribute="trailing" id="leL-Oq-PXv"/>
                             <constraint firstItem="PDa-zB-Uw3" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="8bC-Xf-vdC" secondAttribute="leadingMargin" id="q2a-Cz-TVL"/>
                             <constraint firstItem="Cbm-Aj-JBe" firstAttribute="top" secondItem="3g5-SM-hZt" secondAttribute="bottom" constant="8" id="v9e-xU-7IT"/>
+                            <constraint firstItem="YG3-YW-l1L" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" constant="8" id="xc7-HD-Ptw"/>
+                            <constraint firstItem="Mad-Zl-ZvA" firstAttribute="top" secondItem="YG3-YW-l1L" secondAttribute="bottom" constant="8" id="yf3-a2-Psq"/>
                         </constraints>
+                        <connections>
+                            <outletCollection property="gestureRecognizers" destination="Lsd-k8-FtO" appends="YES" id="iwN-2q-s2N"/>
+                        </connections>
                     </view>
+                    <tabBarItem key="tabBarItem" title="Convert" image="ConvertIcon" id="797-CF-rOc"/>
+                    <connections>
+                        <outlet property="celsiusLabel" destination="3g5-SM-hZt" id="47D-WT-iWd"/>
+                        <outlet property="textField" destination="YG3-YW-l1L" id="87o-IW-FEV"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
+                <tapGestureRecognizer id="Lsd-k8-FtO">
+                    <connections>
+                        <action selector="dismissKeyboard:" destination="BYZ-38-t0r" id="Tes-1K-YUj"/>
+                    </connections>
+                </tapGestureRecognizer>
             </objects>
             <point key="canvasLocation" x="117.59999999999999" y="122.78860569715144"/>
         </scene>
+        <!--Map-->
+        <scene sceneID="Jfw-2s-8P2">
+            <objects>
+                <viewController id="vSu-Yd-oZ0" customClass="MapViewController" customModule="WorldTrotter" customModuleProvider="target" sceneMemberID="viewController">
+                    <mapView key="view" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" mapType="standard" id="jSh-zS-C2t">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                    </mapView>
+                    <tabBarItem key="tabBarItem" title="Map" image="MapIcon" id="oNR-Ke-mNF"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="fhj-av-wd5" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="118" y="818"/>
+        </scene>
+        <!--Tab Bar Controller-->
+        <scene sceneID="Ve4-UM-9PZ">
+            <objects>
+                <tabBarController automaticallyAdjustsScrollViewInsets="NO" id="VLe-mu-Qyh" sceneMemberID="viewController">
+                    <toolbarItems/>
+                    <tabBar key="tabBar" contentMode="scaleToFill" id="j8S-or-UXH">
+                        <autoresizingMask key="autoresizingMask"/>
+                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                    </tabBar>
+                    <connections>
+                        <segue destination="vSu-Yd-oZ0" kind="relationship" relationship="viewControllers" id="R3H-IU-qM5"/>
+                        <segue destination="BYZ-38-t0r" kind="relationship" relationship="viewControllers" id="FID-Ue-LZV"/>
+                    </connections>
+                </tabBarController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="KAU-cX-aPK" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-927" y="407"/>
+        </scene>
     </scenes>
+    <resources>
+        <image name="ConvertIcon" width="48" height="32"/>
+        <image name="MapIcon" width="48" height="32"/>
+    </resources>
 </document>
