--- a/Quiz/Quiz/Base.lproj/Main.storyboard
+++ b/Quiz/Quiz/Base.lproj/Main.storyboard
@@ -35,8 +35,8 @@
                                     <action selector="didPressShowAnswerButton:" destination="BYZ-38-t0r" eventType="touchUpInside" id="7N8-Uf-eTU"/>
                                 </connections>
                             </button>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Question Label" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="pKc-qp-XKd">
-                                <rect key="frame" x="130" y="20" width="115" height="20.5"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Current Question Label" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="pKc-qp-XKd">
+                                <rect key="frame" x="99" y="20" width="177.5" height="20.5"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
@@ -48,13 +48,22 @@
                                     <action selector="didPressShowQuestionButton:" destination="BYZ-38-t0r" eventType="touchUpInside" id="ime-3d-zkO"/>
                                 </connections>
                             </button>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Next Question Label" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Iqr-DA-Tvc">
+                                <rect key="frame" x="110" y="20" width="155" height="21"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
                         </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
                             <constraint firstItem="DHq-zb-r6g" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="8bC-Xf-vdC" secondAttribute="leadingMargin" id="339-SF-Alw"/>
-                            <constraint firstItem="0Xe-eM-KfL" firstAttribute="top" secondItem="pKc-qp-XKd" secondAttribute="bottom" constant="7.5" id="ST5-dK-Df6"/>
+                            <constraint firstAttribute="trailingMargin" relation="greaterThanOrEqual" secondItem="Iqr-DA-Tvc" secondAttribute="trailing" id="Hly-w1-Unx"/>
+                            <constraint firstItem="Iqr-DA-Tvc" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="8bC-Xf-vdC" secondAttribute="leadingMargin" id="MXX-yh-kNe"/>
+                            <constraint firstItem="0Xe-eM-KfL" firstAttribute="top" secondItem="Iqr-DA-Tvc" secondAttribute="bottom" constant="7" id="NDB-5O-f80"/>
                             <constraint firstItem="0Xe-eM-KfL" firstAttribute="centerX" secondItem="pKc-qp-XKd" secondAttribute="centerX" id="Z2g-ZC-tdX"/>
                             <constraint firstItem="0Xe-eM-KfL" firstAttribute="top" secondItem="pKc-qp-XKd" secondAttribute="bottom" constant="8" id="ZD9-9R-Xax"/>
+                            <constraint firstItem="Iqr-DA-Tvc" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" id="dpu-ay-LdR"/>
                             <constraint firstAttribute="trailingMargin" relation="greaterThanOrEqual" secondItem="pKc-qp-XKd" secondAttribute="trailing" id="eei-vq-j3c"/>
                             <constraint firstItem="DHq-zb-r6g" firstAttribute="centerX" secondItem="0Xe-eM-KfL" secondAttribute="centerX" id="fkl-Ce-Ygh"/>
                             <constraint firstItem="pKc-qp-XKd" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="8bC-Xf-vdC" secondAttribute="leadingMargin" id="g63-5z-7uD"/>
@@ -63,13 +72,15 @@
                             <constraint firstItem="DHq-zb-r6g" firstAttribute="centerY" secondItem="8bC-Xf-vdC" secondAttribute="centerY" id="pxk-EK-GGm"/>
                             <constraint firstItem="kp9-HF-gQI" firstAttribute="centerX" secondItem="DHq-zb-r6g" secondAttribute="centerX" id="rq5-rc-HQf"/>
                             <constraint firstAttribute="trailingMargin" relation="greaterThanOrEqual" secondItem="DHq-zb-r6g" secondAttribute="trailing" id="taY-mQ-3GQ"/>
+                            <constraint firstItem="Iqr-DA-Tvc" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="tmd-Eg-Pdb"/>
                             <constraint firstItem="pKc-qp-XKd" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="xxV-xU-MSi"/>
                             <constraint firstItem="kp9-HF-gQI" firstAttribute="top" secondItem="DHq-zb-r6g" secondAttribute="bottom" constant="8" id="yvY-tQ-0jn"/>
                         </constraints>
                     </view>
                     <connections>
                         <outlet property="answerLabel" destination="DHq-zb-r6g" id="DJJ-yR-i1i"/>
-                        <outlet property="questionLabel" destination="pKc-qp-XKd" id="412-dY-Rhr"/>
+                        <outlet property="currentQuestionLabel" destination="pKc-qp-XKd" id="efS-CL-cex"/>
+                        <outlet property="nextQuestionLabel" destination="Iqr-DA-Tvc" id="2ia-n3-JBt"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
