--- a/HomepwnerMultiSections/Homepwner/Base.lproj/Main.storyboard
+++ b/HomepwnerMultiSections/Homepwner/Base.lproj/Main.storyboard
@@ -17,38 +17,9 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                        <view key="tableHeaderView" contentMode="scaleToFill" id="RAr-pg-UZw">
-                            <rect key="frame" x="0.0" y="0.0" width="375" height="60"/>
-                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                            <subviews>
-                                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="3Vy-NU-85W">
-                                    <rect key="frame" x="8" y="15" width="176" height="30"/>
-                                    <state key="normal" title="Edit"/>
-                                    <connections>
-                                        <action selector="toggleEditingMode:" destination="ofV-Zb-y2C" eventType="touchUpInside" id="FjG-ip-NKg"/>
-                                    </connections>
-                                </button>
-                                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="KRH-uO-nPz">
-                                    <rect key="frame" x="192" y="15" width="175" height="30"/>
-                                    <state key="normal" title="Add"/>
-                                    <connections>
-                                        <action selector="addNewItem:" destination="ofV-Zb-y2C" eventType="touchUpInside" id="Z8f-IT-wrf"/>
-                                    </connections>
-                                </button>
-                            </subviews>
-                            <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                            <constraints>
-                                <constraint firstItem="KRH-uO-nPz" firstAttribute="width" secondItem="3Vy-NU-85W" secondAttribute="width" id="7PD-hN-dl6"/>
-                                <constraint firstAttribute="trailing" secondItem="KRH-uO-nPz" secondAttribute="trailing" constant="8" id="Hi7-KF-VNe"/>
-                                <constraint firstItem="KRH-uO-nPz" firstAttribute="centerY" secondItem="RAr-pg-UZw" secondAttribute="centerY" id="Mmx-Jq-qtl"/>
-                                <constraint firstItem="3Vy-NU-85W" firstAttribute="centerY" secondItem="RAr-pg-UZw" secondAttribute="centerY" id="TL7-nd-ofE"/>
-                                <constraint firstItem="3Vy-NU-85W" firstAttribute="leading" secondItem="RAr-pg-UZw" secondAttribute="leading" constant="8" id="dB9-WC-xsN"/>
-                                <constraint firstItem="KRH-uO-nPz" firstAttribute="leading" secondItem="3Vy-NU-85W" secondAttribute="trailing" constant="8" id="ucT-1g-IXm"/>
-                            </constraints>
-                        </view>
                         <prototypes>
                             <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="UITableViewCell" textLabel="CNh-1J-9ll" detailTextLabel="A1N-wF-zd8" style="IBUITableViewCellStyleValue1" id="r2Q-55-3mp">
-                                <rect key="frame" x="0.0" y="88" width="375" height="44"/>
+                                <rect key="frame" x="0.0" y="28" width="375" height="44"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="r2Q-55-3mp" id="x81-jD-5Rf">
                                     <rect key="frame" x="0.0" y="0.0" width="375" height="43"/>
@@ -80,7 +51,7 @@
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="UQA-hC-5dA" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="77.599999999999994" y="107.49625187406298"/>
+            <point key="canvasLocation" x="79" y="108"/>
         </scene>
     </scenes>
 </document>
